# cowork

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md
app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
app/electron/: main.js  preload.js  sidecar.js
app/src/: App.tsx  index.html  store.ts  styles.css  types.ts
app/src/components/: GoalInput.tsx  SettingsPanel.tsx  Sidebar.tsx  TaskView.tsx
docs/: 01-PRD.md  02-TECHNICAL-SPEC.md  03-IMPLEMENTATION-PLAN.md  04-DATA-MODELS.md  05-TOOL-SPECS.md
sidecar/: README.md  pyproject.toml
sidecar/cowork/: __init__.py  __main__.py  models.py
sidecar/cowork/agent/: __init__.py  context.py  executor.py  orchestrator.py  permissions.py  planner.py  verifier.py
sidecar/cowork/llm/: __init__.py  client.py
sidecar/cowork/rpc/: __init__.py  server.py
sidecar/cowork/storage/: __init__.py  config.py  database.py
sidecar/cowork/tools/: __init__.py  base.py  fs.py
sidecar/tests/: __init__.py  test_config.py  test_permissions.py  test_tools_fs.py
